List versions on public participation form
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/public-participation-modal.html
+++ b/src/templates/components/public-participation-modal.html
@@ -30,6 +30,14 @@
   <input class="js-inputAutocomplete" type="text" name="title" required id="id_congressman">
   <label for="id_congressman">Deputado responsavel</label>
 </div>
+<div class="input-select -required">
+  <div class="select">
+    <select id="id_version_name" class="js-versionsSelect" required name="version">
+    </select>
+    <label for="id_version_name">Versão do Documento:</label>
+    <div class="icon"><i class="arrow"></i></div>
+  </div>
+</div>
 <button class="app-button -green js-send">Enviar</button>
 </form>
 {% endblock content %}
