--- a/src/static/scss/components/_input-text.scss
+++ b/src/static/scss/components/_input-text.scss
@@ -112,11 +112,11 @@
 
       & > .item {
         display: flex;
-        flex: 0;
+        align-items: center;
 
         box-sizing: border-box;
         width: 100%;
-        padding: 1rem;
+        padding: 1.5rem 1rem;
 
         cursor: pointer;
 
