change button background-color

--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -234,6 +234,10 @@ body.-white .nav-bar {
     }
   }
 
+  & > .tools > .dropdown-menu.-notifications > button {
+    background-color: #FFF;
+  }
+
   & > .tools > .dropdown-menu.-notifications.-active > .icon > svg path {
     fill: $color-brand;
   }
