--- a/src/static/scss/components/_nav-bar.scss
+++ b/src/static/scss/components/_nav-bar.scss
@@ -49,6 +49,8 @@ body.-white .nav-bar {
   &.-admin {
     justify-content: flex-start;
 
+    padding-right: 0;
+
     border-bottom: 1px solid $color-grayish;
     background: #FFF;
   }
@@ -151,10 +153,6 @@ body.-white .nav-bar {
     color: $color-gray;
   }
 
-  & > .tools > * + * {
-    margin-left: 3rem;
-  }
-
   & > .tools > a {
     font-size: .875rem;
     font-weight: bold;
@@ -162,6 +160,7 @@ body.-white .nav-bar {
     display: flex;
     align-items: center;
 
+    width: 5rem;
     height: 100%;
 
     text-transform: uppercase;
@@ -177,6 +176,78 @@ body.-white .nav-bar {
     &:hover {
       color: lighten($color-brand, 5%);
     }
+  }
+
+  & > .tools > .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
+
+    &:hover > svg path {
+      fill: $color-deep-gray;
+    }
+  }
+
+  & > .tools > .icon::after {
+    font-weight: 400 !important;
+  }
+
+  & > .tools > .icon.-settings {
+    margin-top: auto;
+  }
+
+  & > .tools > .dropdown-menu {
+    &:hover {
+      & > a,
+      & > a > .info > .item {
+        color: $color-brand;
+      }
+
+      & > a > .info > .item::before {
+        background-color: $color-brand;
+      }
+    }
+  }
+
+  & > .tools > .dropdown-menu.-notifications.-active > .list {
+    visibility: visible;
+
+    transition-delay: 0s, 0s, .3s;
+    transform: translateX(0%);
+
+    opacity: 1;
+  }
+
+  & > .tools > .dropdown-menu.-notifications.-active > .list > li.-new {
+    transition: background-color .25s linear;
+    transition-delay: .3s;
+
+    background-color: rgba($color-highlight-on-white, .4);
+
+    & > .datetime::after {
+      transition: opacity .25s linear;
+      transition-delay: .3s;
+
+      opacity: 1;
+    }
+  }
+
+  & > .tools > .dropdown-menu.-notifications > button {
+    background-color: #FFF;
+  }
+
+  & > .tools > .dropdown-menu.-notifications.-active > .icon > svg path {
+    fill: $color-brand;
+  }
+
+  & > .tools > .dropdown-menu.-notifications > .icon > svg circle {
+    fill: none;
+  }
+
+  & > .tools > .dropdown-menu.-notifications.-notified > .icon > svg circle {
+    fill: $color-red;
   }
 
   & > .project {
