Fix versionsList update
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/components/dropdown-version-list.html
+++ b/src/templates/components/dropdown-version-list.html
@@ -1,3 +1,11 @@
-{% for version in named_versions %}
-  <a href="{% url 'document_editor_cluster' template='editor' pk=object.pk %}?version={{version.number}}">{{version.name}}</a>
-{% endfor %}
+<a href="href="{% url 'document_editor_cluster' 'editor' object.id %}"">
+  <span>Minhas Versões</span>
+  <div class="info">
+    <div class="item -versions">{{ object.named_versions.count }}</div>
+  </div>
+</a>
+<ul class="itens">
+  {% for version in named_versions %}
+    <a href="{% url 'document_editor_cluster' template='editor' pk=object.pk %}?version={{version.number}}">{{version.name}}</a>
+  {% endfor %}
+</ul>
