Feature/version timeline (#133)
* Update models and migrations

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Saving documents

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Load text from server

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create save message

* Rebase adjustments

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Adjust contextual toolbar heigth

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add saveMessage

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update documentversion model

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix bugs created by previous migration

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add version on group creation

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Undo same hour version delete

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Allow load a specific version from document

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add message when the version not found

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create named version on group creation

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create named version on click at toolbar

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix this/self confusion

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Saving documents

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix contextual toolbar

* Create timeline sidebar

* Improve animation

* Improve timeline

* Load version from backend

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update timeline on autosave

Signe

--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -69,9 +69,60 @@
       display: block;
     }
 
-    .arrow3,
-    .arrow4 {
-      display: none;
+    & > .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+      height: 4.5rem;
+
+      @include hovering-label(left, 1.5em, $color-gray, .875rem);
+
+      &:hover > svg path {
+        fill: $color-deep-gray;
+      }
+
+      &::after {
+        font-weight: 400 !important;
+        background-color: rgba(#FFF, .95);
+      }
+
+      &.-active {
+         > svg path {
+          fill: $color-brand;
+        }
+      }
+
+      &.-settings {
+        margin-top: auto;
+      }
+
+      &.-collapse {
+        transition: all .3s $swift-out;
+
+        .arrow1,
+        .arrow2 {
+          display: none;
+        }
+
+        .arrow3,
+        .arrow4 {
+          display: block;
+        }
+      }
+
+      &.-collapsed {
+        .arrow1,
+        .arrow2 {
+          display: block;
+        }
+
+        .arrow3,
+        .arrow4 {
+          display: none;
+        }
+      }
     }
   }
 }
