--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -17,20 +17,15 @@
         <span class="-closed">{{group.thematic_group.name}}</span>
         {% endif %}
       {% else %}
-      <span>Minhas Versões</span>
+        {% if selected_version.name %}
+          <span class="js-versionName">{{selected_version.name}}</span>
+        {% else %}
+          <span class="js-versionName">{{selected_version.created|date:'H\hi - d \d\e b, Y'}}</span>
+        {% endif %}
       {% endif %}
       <ul class="list js-menuList">
-        <div class="dropdown">
-          <a href="href="{% url 'document_editor_cluster' 'editor' object.id %}"">
-            <span>Minhas Versões</span>
-            <div class="info">
-              <div class="item -versions">{{ object.invited_groups.all.count }}</div>
-            </div>
-          </a>
-          <ul class="itens">
-            <a href="#">Versão 2</a>
-            <a href="#">Versão 3</a>
-          </ul>
+        <div class="dropdown js-versionsList">
+          {% include "components/dropdown-version-list.html" %}
         </div>
         <hr>
         {% for public_participation in public_group %}
@@ -110,9 +105,10 @@
 <main class="document-editor -active js-documentEditor" data-document-id="{{ object.id }}">
 
   {% if page == 'editor' %}
+    {% include "components/timeline-sidebar.html" %}
     {% include "components/document-editor.html" %}
   {% elif page == 'clusters' %}
-    {% include "components/side-bar.html" %}
+    {% include "components/cluster-sidebar.html" %}
     {% include "components/document-opinions.html" %}
   {% endif %}
 
@@ -125,26 +121,33 @@
 {% include "components/validate-modal.html" %}
 {% include "components/public-participation-modal.html" %}
 {% include "components/participation-info-modal.html" %}
+{% include "components/save-modal.html" %}
 
 {% endblock content %}
 
 {% block page_js %}
 <script src="{% static 'jquery-ui-dist/jquery-ui.min.js' %}"></script>
-<script src="{% static '/js/components/validationModal/view.js' %}"></script>
+<script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
+<script src="{% static 'js/components/validationModal/view.js' %}"></script>
 <script src="{% static 'js/components/publicParticipationModal/view.js' %}"></script>
 <script src="{% static 'js/components/publicParticipationModal/controller.js' %}"></script>
 <script src="{% static 'js/components/congressmanAutocomplete/view.js' %}"></script>
 {% if page == 'editor' %}
-<script src="{% static '/js/utils/position.js' %}"></script>
-<script src="{% static '/js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
-<script src="{% static '/js/components/infoMessage/view.js' %}"></script>
-<script src="{% static '/js/components/documentEditor/view.js' %}"></script>
-<script src="{% static '/js/components/contextualToolbar/view.js' %}"></script>
-<script src="{% static '/js/components/navBar/view.js' %}"></script>
-<script src="{% static '/js/pages/editDocument.js' %}"></script>
+<script src="{% static 'js/utils/position.js' %}"></script>
+<script src="{% static 'js/vendor/silegismg-editor-articulacao-plain-js-polyfill.js' %}"></script>
+<script src="{% static 'js/components/infoMessage/view.js' %}"></script>
+<script src="{% static 'js/components/saveMessage/view.js' %}"></script>
+<script src="{% static 'js/components/saveModal/view.js' %}"></script>
+<script src="{% static 'js/components/documentEditor/controller.js' %}"></script>
+<script src="{% static 'js/components/documentEditor/view.js' %}"></script>
+<script src="{% static 'js/components/toolBar/controller.js' %}"></script>
+<script src="{% static 'js/components/toolBar/view.js' %}"></script>
+<script src="{% static 'js/components/timelineSidebar/view.js' %}"></script>
+<script src="{% static 'js/components/contextualToolbar/view.js' %}"></script>
+<script src="{% static 'js/components/navBar/view.js' %}"></script>
+<script src="{% static 'js/pages/editDocument.js' %}"></script>
 {% elif page == 'clusters' %}
 <script src="{% static 'js/components/reduceExcerpts/view.js' %}"></script>
-<script src="{% static 'js/components/documentSideBar/view.js' %}"></script>
 <script src="{% static 'js/components/clusters/view.js' %}"></script>
 <script src="{% static 'js/components/textHighlight/view.js' %}"></script>
 <script src="{% static 'js/pages/clustersDocument.js' %}"></script>
