Fix notification dropdown

--- a/src/static/scss/components/_dropdown-menu.scss
+++ b/src/static/scss/components/_dropdown-menu.scss
@@ -72,6 +72,7 @@
     border-right-width: 1rem;
     border-bottom-width: .5rem;
     border-left-width: 1rem;
+    flex: 0 0 auto;
   }
 
   &.-notifications > .list > li {
