--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -1,5 +1,4 @@
 .document-editor.-active {
-  width: calc(100% - 11rem);
   padding-left: 27rem;
 
   & > .side-bar {
@@ -16,12 +15,12 @@
 
   display: flex;
 
-  width: calc(100% - 5rem);
+  width: 100%;
   min-height: 100%;
   margin: 0;
-  margin-right: 5rem;
   padding: 0;
   padding-top: 3.75rem;
+  padding-right: 5rem;
 
   transition: all .25s $swift-out;
 
@@ -45,6 +44,7 @@
 
   & > article {
     font-size: 1rem;
+
     box-sizing: border-box;
     width: 100%;
     max-width: 66ch;
@@ -64,10 +64,10 @@
   }
 
   & > article > header > .date {
-    color: $color-deep-gray;
-
     font-size: $font-size-mili;
     font-weight: 500;
+
+    color: $color-deep-gray;
   }
 
   & > article > header > .date.-inactive {
@@ -94,10 +94,10 @@
   }
 
   & > article > header > .-editable > textarea.title {
+    @extend h1;
+
     margin: 0;
     margin-top: 1rem;
-
-    @extend h1;
   }
 
   & > article > header > .-editable > textarea.description {
@@ -113,9 +113,9 @@
   }
 
   & > article > header > .description {
-    margin-top: 1rem;
-
     font-size: 1.25rem;
     font-weight: 300;
+
+    margin-top: 1rem;
   }
 }
