Fix toolbar collapse icon

--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -6,7 +6,7 @@
     <a href="#" class="icon" aria-label="Exportar">
       {% include "svgs/download-icon.html" %}
     </a>
-    <a href="#" class="icon js-collapseExpand -collapse" aria-label="Expandir">
+    <a href="#" class="icon js-collapseExpand -collapse -collapsed" aria-label="Expandir">
       {% include "svgs/expand-icon.html" %}
     </a>
     {% if 'clusters' in request.path %}
