--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -47,7 +47,9 @@
 
       {% if request.user.profile.profile_type == 'owner' %}
       <div class="tools">
-        <!-- <a href="{% url 'owner_documents' %}" {% if current_path|endswith:'/dashboard/' %}class="-active"{% endif %}>Meus documentos</a> -->
+        <a href="{% url 'owner_documents' %}" class="icon">
+          {% include "svgs/dashboard-icon.html" %}
+        </a>
         <div class="dropdown-menu -notifications -notified js-notificationDropdown">
           <button class="icon js-notificationButton" aria-label="Configurar">
             {% include "svgs/notifications-icon.html" %}
