--- a/src/static/scss/components/_dropdown-menu.scss
+++ b/src/static/scss/components/_dropdown-menu.scss
@@ -29,7 +29,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 5rm;
+    width: 5rem;
     height: 100%;
 
     &:hover > .icon svg path {
