--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -4,7 +4,7 @@
 {{ object.title }}
 {% endblock title %}
 
-{% block navbar_extra_classes %}js-navbar js-owner{% endblock navbar_extra_classes %}
+{% block navbar_extra_classes %}js-navbar js-owner {% if 'editor' in request.path %}-edit{% endif %}{% endblock navbar_extra_classes %}
 
 {% block navbar_document %}
   <div class="project">
