--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -42,12 +42,14 @@
       <div class="nav-burger"></div>
       <a href="{% url 'home' %}" class="brand -beta">Wikilegis</a>
 
-      {% block navbar_admin_tools %}
-      {% endblock navbar_admin_tools %}
+      {% block navbar_document %}
+      {% endblock navbar_document %}
 
       {% if request.user.profile.profile_type == 'owner' %}
       <div class="tools">
-        <!-- <a href="{% url 'owner_documents' %}" {% if current_path|endswith:'/dashboard/' %}class="-active"{% endif %}>Meus documentos</a> -->
+        <a href="{% url 'owner_documents' %}" class="icon {% if current_path|endswith:'/dashboard/' %}-active{% endif %}">
+          {% include "svgs/dashboard-icon.html" %}
+        </a>
         <div class="dropdown-menu -notifications -notified js-notificationDropdown">
           <button class="icon js-notificationButton" aria-label="Configurar">
             {% include "svgs/notifications-icon.html" %}
@@ -85,9 +87,7 @@
             </li>
           </ul>
         </div>
-        <a href="#" class="icon -settings" aria-label="Configurar">
-          {% include "svgs/settings-icon.html" %}
-        </a>
+        {% block navbar_tools %}{% endblock navbar_tools %}
       </div>
       {% endif %}
     </div>
